# rm_buff_auto_aim

./: README.md
buff_detector/: CMakeLists.txt
buff_detector/include/buff_detector/: detector.hpp
buff_detector/src/: detector.cpp  detector_node.cpp  mock_detector_node.cpp
buff_predictor/: CMakeLists.txt  package.xml
buff_predictor/src/: predictor_node.cpp
buff_solver/src/: solver.cpp
rm_vision_bringup/config/: buff_param.yaml
rm_vision_bringup/launch/: vision_bringup.launch.py
src/buff_detector/: package.xml
src/buff_detector/src/: detector.cpp
src/buff_interfaces/msg/: BuffAimingData.msg
src/buff_predictor/src/: predictor_node.cpp
src/buff_solver/: CMakeLists.txt
src/buff_solver/include/: buff_solver.hpp
src/buff_solver/src/: buff_solver.cpp  buff_solver_node.cpp  solver.cpp
src/rm_gimbal_description/: README.md
